# auto-qc-tool

./: CLAUDE.md  PROGRESS.md  SKILL.md  pyproject.toml
.claude/skills/auto-qc-cli/: SKILL.md
docs/superpowers/plans/: 2026-06-01-auto-qc-implementation.md  2026-06-03-auto-qc-cli-refactor.md  2026-06-11-auto-qc-v2.0-plan.md  2026-06-18-auto-qc-platform-refactor.md
docs/superpowers/specs/: 2026-06-01-coordinator-design.md  2026-06-03-auto-qc-cli-refactor.md  2026-06-11-auto-qc-v2.0-design.md
rules/: intention-recruit-tree.json  intention-recruit.json  pi-rules.json
src/auto_qc/: cli.py
src/auto_qc/domain/: prompts.py  report.py  rules.py  schemas.py
src/auto_qc/framework/: cross_validator.py  orchestrator.py  validator.py
src/auto_qc/pi/: __init__.py
src/auto_qc/pi/agents/: __init__.py  config.py  config.yaml
src/auto_qc/pi/core/: __init__.py  domain_loader.py  prompt_loader.py
src/auto_qc/pi/domains/: __init__.py  base.py
src/auto_qc/pi/domains/recruitment/: __init__.py  adapter.py  criteria.py  plugin.py
src/auto_qc/pi/domains/recruitment/prompts/: aggregator.md  compliance.md  explorer.md  (+8 more)
src/auto_qc/pi/engine/: pipeline.py  scheduler.py  tracer.py  validator.py
src/auto_qc/pi/utils/: __init__.py  excel_parser.py  json_utils.py  report_generator.py
src/auto_qc/web/: app.py
src/auto_qc/web/routers/: config.py  history.py  pi.py  qc.py
src/auto_qc/web/templates/: base.html  config.html  pi.html  qc.html
src/auto_qc/web/templates/partials/: pi_logs.html  pi_progress.html  pi_result.html  qc_history.html  qc_logs.html  qc_progress.html  qc_result.html  rules_editor.html  rules_sets.html
tests/: test_integration.py
tests/domain/: test_prompts.py  test_report.py  test_rules.py
tests/framework/: test_cross_validator.py
