[project]
name = "auto-qc"
version = "0.0.1"
description = "auto-qc - 外呼通话文本质检工具"
requires-python = ">=3.13"
dependencies = [
    "openpyxl==3.1.5",
    "python-dotenv>=1.1.0",
    "json-repair==0.59.10",
    "openai>=1.70.0",
]

[project.scripts]
auto-qc = "auto_qc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
